--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1379.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^7.3.2",
+    "nodemon": "^3.0.1",
     "serverless": "^3.31.0",
     "serverless-esbuild": "^1.44.0",
     "serverless-http": "^3.2.0"
