--- a/serverless.yml
+++ b/serverless.yml
@@ -7,7 +7,6 @@ plugins:
   - serverless-esbuild
 
 custom:
-  tableName: "users-table-${sls:stage}"
   esbuild:
     bundle: true
     minify: false
@@ -15,38 +14,9 @@ custom:
 provider:
   name: aws
   runtime: nodejs14.x
-  iam:
-    role:
-      statements:
-        - Effect: Allow
-          Action:
-            - dynamodb:Query
-            - dynamodb:Scan
-            - dynamodb:GetItem
-            - dynamodb:PutItem
-            - dynamodb:UpdateItem
-            - dynamodb:DeleteItem
-          Resource:
-            - Fn::GetAtt: [UsersTable, Arn]
-  environment:
-    USERS_TABLE: ${self:custom.tableName}
 
 functions:
   api:
-    handler: handler.handler
+    handler: handler.app
     events:
       - httpApi: "*"
-
-resources:
-  Resources:
-    UsersTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        AttributeDefinitions:
-          - AttributeName: userId
-            AttributeType: S
-        KeySchema:
-          - AttributeName: userId
-            KeyType: HASH
-        BillingMode: PAY_PER_REQUEST
-        TableName: ${self:custom.tableName}
