--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "serverless": "^3.31.0",
     "serverless-esbuild": "^1.44.0",
     "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "esbuild": "^0.18.11"
   }
 }
