--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "type": "module",
   "scripts": {
     "start": "nodemon app.js"
   },
@@ -21,6 +20,7 @@
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
-    "esbuild": "^0.18.11"
+    "esbuild": "^0.18.11",
+    "serverless-offline": "^12.0.4"
   }
 }
