--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1379.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^7.3.2",
-    "nodemon": "^3.0.1",
-    "serverless": "^3.31.0",
-    "serverless-esbuild": "^1.44.0",
-    "serverless-http": "^3.2.0"
+    "bcryptjs": "2.4.3",
+    "mongoose": "6.11.5",
+    "serverless-dotenv-plugin": "4.0.2",
+    "validator": "13.11.0"
   },
   "devDependencies": {
-    "esbuild": "^0.18.11",
-    "serverless-offline": "^12.0.4"
+    "serverless-offline": "12.0.4"
   }
 }
