--- a/serverless.yml
+++ b/serverless.yml
@@ -1,30 +1,36 @@
-org: djalmahenry
-app: aws-test-api
-service: aws-test-api
+service: serverless-mongodb-functions
 frameworkVersion: "3"
 
 plugins:
-  - serverless-esbuild
+  - serverless-dotenv-plugin
   - serverless-offline
-
-custom:
-  esbuild:
-    bundle: true
-    minify: false
 
 provider:
   name: aws
-  runtime: nodejs14.x
-  vpc: 
-    securityGroupIds:
-      - sg-0479cf911761ecc22
-    subnetIds:
-      - subnet-00853b5b6264ee5df
-      - subnet-0097c80259c75b0d6
+  runtime: nodejs16.x
+  memorySize: 128
+  region: us-east-1
+  stage: ${opt:stage, 'dev'}
+  httpApi:
+    cors: true
 
 functions:
-  api:
-    handler: app.handler
-    timeout: 15
+  createUser:
+    handler: src/handlers/createUser.handler
     events:
-      - httpApi: "*"
+      - httpApi:
+          path: /users
+          method: POST
+
+  getUser:
+    handler: src/handlers/getUser.handler
+    events:
+      - httpApi:
+          path: /users/{email}
+          method: GET
+  getAll:
+    handler: src/handlers/getAll.handler
+    events:
+      - httpApi:
+          path: /users
+          method: GET
