--- a/serverless.yml
+++ b/serverless.yml
@@ -1,36 +1,24 @@
 service: serverless-mongodb-functions
 frameworkVersion: "3"
+configValidationMode: error
 
 plugins:
+  - serverless-google-cloudfunctions
   - serverless-dotenv-plugin
   - serverless-offline
 
 provider:
-  name: aws
-  runtime: nodejs16.x
-  memorySize: 128
-  region: us-east-1
-  stage: ${opt:stage, 'dev'}
-  httpApi:
-    cors: true
+  name: google
+  runtime: nodejs16
+  project: tcc-api-395100
+  credentials: keys/tcc-api-395100-9419e12986e0.json
+  region: us-central1
+  environment:
+    stage: ${opt:stage, 'dev'}
 
 functions:
-  createUser:
-    handler: src/handlers/createUser.handler
-    events:
-      - httpApi:
-          path: /users
-          method: POST
-
-  getUser:
-    handler: src/handlers/getUser.handler
-    events:
-      - httpApi:
-          path: /users/{email}
-          method: GET
   getAll:
-    handler: src/handlers/getAll.handler
+    handler: handler
     events:
-      - httpApi:
-          path: /users
-          method: GET
+      - http: get /users
+
